; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_config.c_get_hash_value.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_config.c_get_hash_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, %struct.TYPE_4__*, i8*, i64)* @get_hash_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_hash_value(i32* %0, %struct.TYPE_4__* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i64 @strlen(i8* %12)
  store i64 %13, i64* %11, align 8
  %14 = load i64, i64* %9, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %4
  %17 = load i32*, i32** %6, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i64, i64* %11, align 8
  %20 = call i8* @apr_hash_get(i32* %17, i8* %18, i64 %19)
  store i8* %20, i8** %5, align 8
  br label %51

21:                                               ; preds = %4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %23 = load i64, i64* %11, align 8
  %24 = call i32 @svn_stringbuf_ensure(%struct.TYPE_4__* %22, i64 %23)
  store i64 0, i64* %10, align 8
  br label %25

25:                                               ; preds = %41, %21
  %26 = load i64, i64* %10, align 8
  %27 = load i64, i64* %11, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = load i8*, i8** %8, align 8
  %31 = load i64, i64* %10, align 8
  %32 = getelementptr inbounds i8, i8* %30, i64 %31
  %33 = load i8, i8* %32, align 1
  %34 = call i64 @apr_tolower(i8 signext %33)
  %35 = trunc i64 %34 to i8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = load i64, i64* %10, align 8
  %40 = getelementptr inbounds i8, i8* %38, i64 %39
  store i8 %35, i8* %40, align 1
  br label %41

41:                                               ; preds = %29
  %42 = load i64, i64* %10, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %10, align 8
  br label %25

44:                                               ; preds = %25
  %45 = load i32*, i32** %6, align 8
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  %48 = load i8*, i8** %47, align 8
  %49 = load i64, i64* %11, align 8
  %50 = call i8* @apr_hash_get(i32* %45, i8* %48, i64 %49)
  store i8* %50, i8** %5, align 8
  br label %51

51:                                               ; preds = %44, %16
  %52 = load i8*, i8** %5, align 8
  ret i8* %52
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @apr_hash_get(i32*, i8*, i64) #1

declare dso_local i32 @svn_stringbuf_ensure(%struct.TYPE_4__*, i64) #1

declare dso_local i64 @apr_tolower(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
